# mnemosyne

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  VALIDATION_REPORT.md  docker-compose.yml  pyproject.toml  validation_harness.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  NIST_CONTROL_MAPPING.md  THREAT_MODEL.md
examples/: README.md  langchain_memory_guard.py  quickstart.py
scripts/: gen_nist_doc.py
src/mnemosyne/: __init__.py  __main__.py  cli.py
src/mnemosyne/api/: __init__.py  main.py
src/mnemosyne/core/: __init__.py  config.py  exceptions.py  gateway.py  models.py
src/mnemosyne/detectors/: __init__.py  anomaly.py  base.py  injection.py  obfuscation.py  secrets_pii.py
src/mnemosyne/integrity/: __init__.py  audit.py  signer.py
src/mnemosyne/nist/: __init__.py
src/mnemosyne/policy/: __init__.py  default_policy.yaml  engine.py
src/mnemosyne/store/: __init__.py  base.py  sqlite.py
src/mnemosyne/telemetry/: __init__.py
tests/: conftest.py  test_api.py  test_detectors.py  test_gateway.py  test_integrity.py  test_nist.py  test_policy.py  test_redteam_corpus.py  test_store.py
